--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>URL shorter</h1>
         <input  type="text" id="url" value="https://"> <br>
         <button onclick="shorten()">Short!</button>
-        <div id="short"><a href="http://localhost:1234/r/xrvzh">http://localhost:1234/r/xrvzh</a></div>
+        <div id="short"><a href=""></a></div>
     </body>
     <script>
         function shorten() {
